--- a/kinetic-loader/style.css
+++ b/kinetic-loader/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(224, 229, 235);
+    background-color: #2c3e50;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 #app{
@@ -9,21 +9,21 @@ body{
     transform: translate(-50%, -50%);
 }
 .triangle-up {
-    margin-left: 8vh;
+    margin-left: 9vh;
 	width: 0;
 	height: 0;
 	border-left: 25px solid transparent;
 	border-right: 25px solid transparent;
-	border-bottom: 50px solid #555;
-    animation: forup 2s linear infinite;
+	border-bottom: 50px solid white;
+    animation: forup 1.5s linear infinite;
 }
 .triangle-down {
 	width: 0;
 	height: 0;
 	border-left: 25px solid transparent;
 	border-right: 25px solid transparent;
-	border-top: 50px solid #555;
-    animation: fordown 2s linear infinite;
+	border-top: 50px solid white;
+    animation: fordown 1.5s linear infinite;
 }
 @keyframes forup {
     0%{
