--- a/live-user-filter/style.css
+++ b/live-user-filter/style.css
@@ -2,9 +2,25 @@ body{
     background-color: #2c3e50;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+.header{
+    color: white;
+    text-align: center;
+}
 #app{
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+.show{
+list-style-type: none;
+padding: 0.5vh;
+color: white;
+display: block;
+}
+.hide{
+    display: none;
+}
+#output{
+    height: 60vh;
 }
